Fix the z-index

--- a/app/styles/app.fixes.less
+++ b/app/styles/app.fixes.less
@@ -30,3 +30,7 @@
     font-size: 18px;
     margin-bottom: 10px;
 }
+
+.z-index-2-fix {
+    z-index: 2;
+}
