--- a/app/styles/app.irene.less
+++ b/app/styles/app.irene.less
@@ -129,7 +129,6 @@ html, body {
 }
 
 .copact-text {
-  z-index: 2;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
